Inclusão de opção remover e documentação com swagger
